sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:24: error: type mismatch;
 found   : Boolean
 required: Int
    if (getCouleur(apresbleu==BLANC)){
                            ^